sumo/tests/duarouter/errors/network/junction/root__junction#id__empty2/errors.duarouter
Error: The network file 'net.net.xml' could not be found.
Quitting (on error).
